cmake_minimum_required(VERSION 3.29)
project(homework_1)

set(CMAKE_CXX_STANDARD 20)

add_executable(first problem1.cpp
        problem4.cpp
        problem5.cpp)
add_executable(second problem2.cpp)
add_executable(third problem3.cpp)
add_executable(fourth problem4.cpp)
add_executable(fifth problem5.cpp)
